* Fixed diet badges being hard to see in light mode

--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -106,6 +106,7 @@
   font-style: italic;
   font-weight: normal;
   margin-left: 10px;
+  text-shadow: 0 0 1.5px black;
 
   &.v, &.vo {
 	color: lightgreen;
